--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,4 +9,6 @@ graft test
 graft doc
 global-exclude __pycache__
 global-exclude *.py[co]
-global-exclude html-cov
+global-exclude html-covinclude versioneer.py
+include epab/_version.py
+include versioneer.py
