--- a/setup.cfg
+++ b/setup.cfg
@@ -1,34 +1,16 @@
 [bdist_wheel]
 python-tag = py36
 
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = epab/_version.py
+versionfile_build = epab/_version.py
+tag_prefix =
+parentdir_prefix = epab-
+
 [aliases]
 test=pytest
-
-[flake8]
-ignore =
-    D203,
-    E126,
-max-line-length = 120
-exclude =
-    .svn,
-    CVS,
-    .bzr,
-    .hg,
-    .git,
-    __pycache__,
-    .tox,
-    __init__.py,
-    dummy_miz.py,
-    build,
-    dist,
-    output,
-    .cache,
-    .hypothesis,
-    qt_resource.py,
-    _parking_spots.py,
-    ./test/*,
-    ./.eggs/*,
-max-complexity = 10
 
 [tool:pytest]
 testpaths = test
