--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -69,7 +69,7 @@ install:
 build: off
 
 test_script:
-  - "epab pytest"
+  - cmd: pytest test
 
   # Install wheel-building support
   - "%PYTHON%\\python.exe setup.py bdist_wheel"
