--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -67,7 +67,7 @@ cache:
 install:
   - "%PYTHON%\\python.exe -m pip install --disable-pip-version-check --user --upgrade pip setuptools"
   - "%PYTHON%\\python.exe -m pip install --upgrade pipenv"
-  - choco install gitversion.portable -pre -y
+  - cmd: pip install gitchangelog
   - cmd: pipenv install -d .
 
 build: off
