--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -65,7 +65,7 @@ cache:
 
 
 install:
-  - "%PYTHON%\\python.exe -m pip install --disable-pip-version-check --user --upgrade pip setuptools"
+  - "%PYTHON%\\python.exe -m pip install --disable-pip-version-check --user --upgrade pip setuptools wheel"
   - "%PYTHON%\\python.exe -m pip install --upgrade pipenv"
   - cmd: pip install gitchangelog
   - cmd: pipenv install -d .
