fix: install requirements using pip

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -83,9 +83,9 @@ test_script:
   - cmd: pipenv run pytest test
   - "%PYTHON%/Scripts/pip.exe install codacy-coverage"
   - "%PYTHON%/Scripts/python-codacy-coverage.exe -r coverage.xml & exit 0"
-  - cmd: pip install -e .
   - cmd: del appveyor.yml
-  - cmd: IF /I "%APPVEYOR_REPO_BRANCH%"=="develop" (epab release) ELSE (echo "Not on develop, skipping release")
+  - cmd: pipenv run pip install -e .
+  - cmd: IF /I "%APPVEYOR_REPO_BRANCH%"=="develop" (pipenv run epab release) ELSE (echo "Not on develop, skipping release")
   - cmd: for /f "delims=" %%i in ('git describe --tags') do set CVERSION=%%i
   - cmd: echo "Version %CVERSION%"
   - cmd: appveyor UpdateBuild -Version "%CVERSION%-%APPVEYOR_BUILD_NUMBER%-%APPVEYOR_REPO_COMMIT%"
