--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ python-tag = py36
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = epab/_version.py
-versionfile_build = epab/_version.py
+versionfile_source = epab/_e_version.py
+versionfile_build = epab/_e_version.py
 tag_prefix =
 parentdir_prefix = epab-
 
