chg: dev: huge reafctor

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,5 +10,6 @@ graft doc
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude html-covinclude
+global-exclude .hypothesis
 include versioneer.py
 include epab/_e_version.py
