--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,6 @@ python_version = "3.6"
 
 click = "*"
 pyyaml = "*"
-versioneer = "*"
 semver = "*"
 wheel = "*"
 twine = "*"
@@ -27,8 +26,11 @@ coverage = "*"
 hypothesis = "*"
 pytest-cache = "*"
 pytest-cov = "*"
-pytest-mock = "*"
 pytest-pycharm = "*"
 pytest = "*"
 gitchangelog = "*"
 mimesis = "*"
+gitpython = "*"
+mockito = "*"
+"delegator.py" = "*"
+setuptools_scm = "*"
