new: check for dead fixtures
fix #10

--- a/Pipfile
+++ b/Pipfile
@@ -33,4 +33,5 @@ mimesis = "*"
 gitpython = "*"
 mockito = "*"
 "delegator.py" = "*"
-setuptools_scm = "*"
+setuptools-scm = "*"
+pytest-deadfixtures = "*"
