--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ include LICENSE
 include MANIFEST.in
 include epab.yml
 include *.rst
-include
+include-recursive resources/*
 graft epab
 graft test
 graft doc
