--- a/Pipfile
+++ b/Pipfile
@@ -33,5 +33,7 @@ mimesis = "*"
 gitpython = "*"
 mockito = "*"
 "delegator.py" = "*"
-setuptools_scm = "*"
+setuptools-scm = "*"
 ipython = "*"
+certifi = "*"
+pefile = "*"
