--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ apipkg==1.4
 astroid==1.6.2
 attrs==17.4.0
 autopep8==1.3.5
-backports.functools-lru-cache==1.5; python_version < '3.4'
+backports.functools-lru-cache==1.5; python_version == '2.7'
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
@@ -52,5 +52,5 @@ smmap2==2.0.3
 tqdm==4.19.9
 twine==1.11.0
 urllib3==1.22
-wheel==0.30.0
+wheel==0.31.0
 wrapt==1.10.11
