--- a/Pipfile
+++ b/Pipfile
@@ -1,36 +1,33 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [requires]
-
 python_version = "3.6"
-
+platform = 'windows'
 
 [packages]
-
-click = "*"
-pyyaml = "*"
-wheel = "*"
-twine = "*"
-"autopep8" = "*"
-pylint = "*"
-isort = "*"
-safety = "*"
-"flake8" = "*"
-coverage = "*"
-hypothesis = "*"
-pytest-cache = "*"
-pytest-cov = "*"
-pytest-pycharm = "*"
-pytest = "*"
-gitchangelog = "*"
-gitpython = "*"
-mockito = "*"
-"delegator.py" = "*"
-setuptools-scm = "*"
-certifi = "*"
-pefile = "*"
+click = ">=6.7"
+pyyaml = ">=3.12"
+wheel = ">=0.31.1"
+twine = ">=1.11.0"
+"autopep8" = ">=1.3.5"
+pylint = ">=1.9.0"
+isort = ">=4.3.4"
+safety = ">=1.8.1"
+"flake8" = ">=3.5"
+coverage = ">=4.5.1"
+hypothesis = ">=3.56"
+pytest-cache = ">=1"
+pytest-cov = ">=2.5.1"
+pytest-pycharm = {version=">=0.5.0", os_name = "=='nt'"}
+pytest = ">=3.5.1"
+gitchangelog = ">=3.0.3"
+gitpython = ">=2.1.9"
+mockito = ">=1.1"
+"delegator.py" = ">=0.1.0"
+setuptools-scm = ">=2.1.0"
+certifi = ">=2018.4.16"
+pefile = ">=2017.11.5"
+mypy = ">=0.600"
