--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 __pycache__
 .idea/
 .cache
-.tox/
-.eggs/
 .hypothesis/
 *.config
 *.debug
@@ -24,3 +22,4 @@ artifacts/
 /doitall.cmd
 test.yml
 .coverage*
+.mypy_cache
