--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,6 @@ platform = 'windows'
 [packages]
 pip = ">=18"
 click = ">=6.7"
-pyyaml = ">=3.12"
 wheel = ">=0.31.1"
 twine = ">=1.11.0"
 "autopep8" = ">=1.3.5"
@@ -28,13 +27,16 @@ pytest-vcr = ">=0.3.0"
 gitchangelog = ">=3.0.3"
 gitpython = ">=2.1.9"
 mockito = ">=1.1"
-"delegator.py" = ">=0.1.0"
 setuptools-scm = ">=2.1.0"
 certifi = ">=2018.4.16"
 pefile = ">=2017.11.5"
 mypy = ">=0.600"
-elib_config = {git = "https://github.com/etcher-be/elib_config", ref = "master"}
+elib_config = ">=2018.8.25.1"
 toml = ">=0.9.4"
+sarge = ">=0.1.5.post0"
+pytest-repeat = ">=0.7.0"
+pytest-faker = ">=2.0.0"
+pytest-watch = ">=4.2.0"
 
 [dev-packages]
 "e1839a8" = {path = ".", editable = true}
