--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,5 @@
 apipkg==1.5
+argh==0.26.2
 astroid==2.0.4
 atomicwrites==1.2.0
 attrs==18.1.0
@@ -8,15 +9,17 @@ chardet==3.0.4
 click==6.7
 colorama==0.3.9; sys_platform == 'win32'
 coverage==4.5.1
-delegator.py==0.1.0
+docopt==0.6.2
 dparse==0.4.1
+elib-config==2018.8.25.1
 execnet==1.5.0
+faker==0.9.0
 flake8==3.5.0
 future==0.16.0
 gitchangelog==3.0.3
 gitdb2==2.0.4
 gitpython==2.1.11
-hypothesis==3.69.2
+hypothesis==3.69.3
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -26,11 +29,10 @@ more-itertools==4.3.0
 multidict==4.3.1
 mypy==0.620
 packaging==17.1
+pathtools==0.1.2
 pefile==2018.8.8
-pexpect==4.6.0
 pkginfo==1.4.2
 pluggy==0.7.1
-ptyprocess==0.6.0
 py==1.5.4
 pycodestyle==2.3.1
 pyflakes==1.6.0
@@ -38,22 +40,29 @@ pylint==2.1.1
 pyparsing==2.2.0
 pytest-cache==1.0
 pytest-cov==2.5.1
+pytest-faker==2.0.0
 pytest-pycharm==0.5.0; os_name == 'nt'
+pytest-repeat==0.7.0
 pytest-vcr==0.3.0
-pytest==3.7.2
+pytest-watch==4.2.0
+pytest==3.7.3
+python-dateutil==2.7.3
 pyyaml==3.13
 requests-toolbelt==0.8.0
 requests==2.19.1
-ruamel.yaml==0.15.61
 safety==1.8.4
+sarge==0.1.5.post0
 setuptools-scm==3.1.0
 six==1.11.0
 smmap2==2.0.4
+text-unidecode==1.2
+toml==0.9.4
 tqdm==4.25.0
 twine==1.11.0
-typed-ast==1.1.0
+typed-ast==1.1.0; python_version < '3.7' and implementation_name == 'cpython'
 urllib3==1.23
 vcrpy==1.13.0
+watchdog==0.8.3
 wheel==0.31.1
 wrapt==1.10.11
 yarl==1.2.6; python_version >= '3.4'
