--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pylint==2.1.1
 pyparsing==2.2.0
 pytest-cache==1.0
 pytest-cov==2.5.1
+pytest-deadfixtures==2.0.1
 pytest-faker==2.0.0
 pytest-pycharm==0.5.0; os_name == 'nt'
 pytest-repeat==0.7.0
