--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,7 @@ pytest-faker = ">=2.0.0"
 pytest-watch = ">=4.2.0"
 pytest-deadfixtures = ">=2.0.1"
 elib-run = ">=2018.8.27.2"
+bandit = ">=1.5.0"
 
 [dev-packages]
 epab = {editable = true, path = "."}
