--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-apipkg==1.5
+apipkg==1.5; python_version != '3.3.*'
 argh==0.26.2
 astroid==2.0.4
-atomicwrites==1.2.0
+atomicwrites==1.2.0; python_version != '3.3.*'
 attrs==18.1.0
 autopep8==1.3.5
+bandit==1.5.0
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
@@ -11,29 +12,31 @@ colorama==0.3.9; sys_platform == 'win32'
 coverage==4.5.1
 docopt==0.6.2
 dparse==0.4.1
-elib-config==2018.8.25.1
-execnet==1.5.0
+elib-config==2018.8.27.4; python_version != '3.0.*'
+elib-run==2018.8.27.2
+execnet==1.5.0; python_version != '3.3.*'
 faker==0.9.0
 flake8==3.5.0
 future==0.16.0
 gitchangelog==3.0.3
 gitdb2==2.0.4
 gitpython==2.1.11
-hypothesis==3.69.3
+hypothesis==3.69.8
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 mockito==1.1.0
 more-itertools==4.3.0
-multidict==4.3.1
+multidict==4.3.1; python_version >= '3.4.1'
 mypy==0.620
 packaging==17.1
 pathtools==0.1.2
+pbr==4.2.0
 pefile==2018.8.8
 pkginfo==1.4.2
-pluggy==0.7.1
-py==1.5.4
+pluggy==0.7.1; python_version != '3.3.*'
+py==1.6.0; python_version != '3.1.*'
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pylint==2.1.1
@@ -56,13 +59,14 @@ sarge==0.1.5.post0
 setuptools-scm==3.1.0
 six==1.11.0
 smmap2==2.0.4
+stevedore==1.29.0
 text-unidecode==1.2
 toml==0.9.4
-tqdm==4.25.0
+tqdm==4.25.0; python_version != '3.0.*'
 twine==1.11.0
 typed-ast==1.1.0; python_version < '3.7' and implementation_name == 'cpython'
-urllib3==1.23
-vcrpy==1.13.0
+urllib3==1.23; python_version != '3.3.*'
+vcrpy==1.13.0; python_version >= '3.4.1'
 watchdog==0.8.3
 wheel==0.31.1
 wrapt==1.10.11
