--- a/Pipfile
+++ b/Pipfile
@@ -38,7 +38,7 @@ pytest-repeat = ">=0.7.0"
 pytest-faker = ">=2.0.0"
 pytest-watch = ">=4.2.0"
 pytest-deadfixtures = ">=2.0.1"
-elib-run = {editable = true, git = "https://github.com/etcher-be/elib_run@feature/reafactor"}
+elib-run = {editable = true, git = "https://github.com/etcher-be/elib_run.git@feature/reafactor"}
 bandit = ">=1.5.0"
 
 [dev-packages]
