--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ chardet==3.0.4
 click==6.7
 colorama==0.3.9; sys_platform == 'win32'
 coverage==4.5.1
+dataclasses==0.6
 docopt==0.6.2
 dparse==0.4.1
 elib-config==2018.8.27.4; python_version != '3.0.*'
-elib-run==2018.8.27.2
 execnet==1.5.0; python_version != '3.3.*'
 faker==0.9.0
 flake8==3.5.0
