--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 apipkg==1.5; python_version != '3.3.*'
 argh==0.26.2
 astroid==2.0.4
-atomicwrites==1.2.1; python_version != '3.1.*'
+atomicwrites==1.2.1; python_version != '3.3.*'
 attrs==18.1.0
 autopep8==1.3.5
 bandit==1.5.0
@@ -13,7 +13,8 @@ coverage==4.5.1
 dataclasses==0.6
 docopt==0.6.2
 dparse==0.4.1
-elib-config==2018.8.27.4; python_version != '3.0.*'
+elib-config==2018.8.27.4; python_version != '3.3.*'
+elib-run==2018.8.31.1
 execnet==1.5.0; python_version != '3.3.*'
 faker==0.9.0
 flake8==3.5.0
@@ -36,7 +37,7 @@ pbr==4.2.0
 pefile==2018.8.8
 pkginfo==1.4.2
 pluggy==0.7.1; python_version != '3.3.*'
-py==1.6.0; python_version != '3.1.*'
+py==1.6.0; python_version != '3.3.*'
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pylint==2.1.1
@@ -52,8 +53,8 @@ pytest-watch==4.2.0
 pytest==3.7.4
 python-dateutil==2.7.3
 pyyaml==3.13
-requests-toolbelt==0.8.0
-requests==2.19.1
+requests-toolbelt==0.8.0; python_version != '3.3.*'
+requests==2.19.1; python_version != '3.3.*'
 safety==1.8.4
 sarge==0.1.5.post0
 setuptools-scm==3.1.0
