--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,16 +3,18 @@ argh==0.26.2
 astroid==2.0.4
 atomicwrites==1.2.1; python_version != '3.3.*'
 attrs==18.2.0
-autopep8==1.3.5
+autopep8==1.4
 bandit==1.5.0
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
 colorama==0.3.9; sys_platform == 'win32'
 coverage==4.5.1
+dataclasses==0.6
 docopt==0.6.2
 dparse==0.4.1
 elib-config==2018.8.27.4; python_version != '3.3.*'
+elib-run==2018.8.31.2
 execnet==1.5.0; python_version != '3.3.*'
 faker==0.9.0
 flake8==3.5.0
@@ -69,4 +71,4 @@ vcrpy==1.13.0; python_version >= '3.4.1'
 watchdog==0.9.0
 wheel==0.31.1
 wrapt==1.10.11
-yarl==1.2.6; python_version >= '3.4.1'
+yarl==1.2.6; python_version >= '3.4'
