--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ astroid==2.0.4
 atomicwrites==1.2.1; python_version != '3.3.*'
 attrs==18.2.0
 autopep8==1.4
-bandit==1.5.0
+bandit==1.5.1
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
@@ -13,8 +13,8 @@ coverage==4.5.1
 dataclasses==0.6
 docopt==0.6.2
 dparse==0.4.1
-elib-config==2018.8.27.4; python_version != '3.3.*'
-elib-run==2018.8.31.2
+elib-config==2018.9.2.1
+elib-run==2018.9.9.1
 execnet==1.5.0; python_version != '3.3.*'
 faker==0.9.0
 flake8==3.5.0
@@ -22,14 +22,14 @@ future==0.16.0
 gitchangelog==3.0.3
 gitdb2==2.0.4
 gitpython==2.1.11
-hypothesis==3.70.0
+hypothesis==3.71.1
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 mockito==1.1.1
 more-itertools==4.3.0
-multidict==4.3.1; python_version >= '3.4.1'
+multidict==4.4.0; python_version >= '3.4.1'
 mypy==0.620
 packaging==17.1
 pathtools==0.1.2
@@ -43,14 +43,14 @@ pyflakes==1.6.0
 pylint==2.1.1
 pyparsing==2.2.0
 pytest-cache==1.0
-pytest-cov==2.5.1
+pytest-cov==2.6.0
 pytest-deadfixtures==2.0.1
 pytest-faker==2.0.0
 pytest-pycharm==0.5.0; os_name == 'nt'
 pytest-repeat==0.7.0
 pytest-vcr==0.3.0
 pytest-watch==4.2.0
-pytest==3.7.4
+pytest==3.8.0
 python-dateutil==2.7.3
 pyyaml==3.13
 requests-toolbelt==0.8.0; python_version != '3.3.*'
@@ -62,7 +62,7 @@ six==1.11.0
 smmap2==2.0.4
 stevedore==1.29.0
 text-unidecode==1.2
-toml==0.9.4
+toml==0.9.6
 tqdm==4.25.0; python_version != '3.0.*'
 twine==1.11.0
 typed-ast==1.1.0; python_version < '3.7' and implementation_name == 'cpython'
