--- a/requirements.txt
+++ b/requirements.txt
@@ -13,16 +13,16 @@ coverage==4.5.1
 dataclasses==0.6
 docopt==0.6.2
 dparse==0.4.1
-elib-config==2018.9.2.1
+elib-config==2018.9.16.1
 elib-run==2018.9.9.1
 execnet==1.5.0; python_version != '3.3.*'
-faker==0.9.0
+faker==0.9.1; python_version != '3.2.*'
 flake8==3.5.0
 future==0.16.0
 gitchangelog==3.0.3
 gitdb2==2.0.4
 gitpython==2.1.11
-hypothesis==3.71.3
+hypothesis==3.71.6
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -71,4 +71,4 @@ vcrpy==1.13.0; python_version >= '3.4.1'
 watchdog==0.9.0
 wheel==0.31.1
 wrapt==1.10.11
-yarl==1.2.6; python_version >= '3.4'
+yarl==1.2.6; python_version >= '3.4.1'
