--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ pip = ">=18"
 click = ">=6.7"
 wheel = ">=0.31.1"
 twine = ">=1.11.0"
-"autopep8" = ">=1.3.5"
+#"autopep8" = ">=1.3.5"
 pylint = ">=1.9.0"
 isort = ">=4.3.4"
 safety = ">=1.8.1"
