--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,16 +14,16 @@ dataclasses==0.6
 docopt==0.6.2
 docutils==0.14
 dparse==0.4.1
-elib-config==2018.10.24.1
-elib-run==2018.10.21.1
+elib-config==2018.10.26.1
+elib-run==2018.10.26.1
 execnet==1.5.0
 faker==0.9.2
 flake8==3.6.0
-future==0.16.0
+future==0.17.0
 gitchangelog==3.0.3
 gitdb2==2.0.5
 gitpython==2.1.11
-hypothesis==3.79.3
+hypothesis==3.81.0
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -53,10 +53,10 @@ pytest-pycharm==0.5.0 ; os_name == 'nt'
 pytest-repeat==0.7.0
 pytest-vcr==0.3.0
 pytest-watch==4.2.0
-pytest==3.9.2
-python-dateutil==2.7.3
+pytest==3.9.3
+python-dateutil==2.7.5
 pyyaml==3.13
-readme-renderer==23.0
+readme-renderer==24.0
 requests-toolbelt==0.8.0
 requests==2.20.0
 safety==1.8.4
@@ -77,3 +77,4 @@ watchdog==0.9.0
 webencodings==0.5.1
 wheel==0.32.2
 wrapt==1.10.11
+yarl==1.2.6 ; python_version >= '3.4'
