--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
--i https://pypi.python.org/simple/
 apipkg==1.5
 argh==0.26.2
 astroid==2.0.4
@@ -9,7 +8,7 @@ bleach==3.0.2
 certifi==2018.10.15
 chardet==3.0.4
 click==7.0
-colorama==0.4.0
+colorama==0.4.0 ; sys_platform == 'win32'
 coverage==4.5.1
 dataclasses==0.6
 docopt==0.6.2
