--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ dataclasses==0.6
 docopt==0.6.2
 docutils==0.14
 dparse==0.4.1
-elib-config==2018.10.26.1
+elib-config==2018.10.29.1
 elib-run==2018.10.26.1
 execnet==1.5.0
 faker==0.9.2
@@ -42,6 +42,7 @@ py==1.7.0
 pygments==2.2.0
 pylint==2.1.1
 pyparsing==2.2.2
+pystache==0.5.4
 pytest-cache==1.0
 pytest-cov==2.6.0
 pytest-deadfixtures==2.0.1
