--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -26,7 +26,9 @@ gitpython==2.1.11
 hypothesis==3.81.0
 idna==2.7
 isort==4.3.4
+jinja2==2.10
 lazy-object-proxy==1.3.1
+markupsafe==1.0
 mccabe==0.6.1
 mockito==1.1.1
 more-itertools==4.3.0
@@ -45,6 +47,7 @@ pyflakes==2.0.0
 pygments==2.2.0
 pylint==2.1.1
 pyparsing==2.2.2
+pystache==0.5.4
 pytest-cache==1.0
 pytest-cov==2.6.0
 pytest-deadfixtures==2.0.1
