--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,9 @@ gitpython==2.1.11
 hypothesis==3.81.0
 idna==2.7
 isort==4.3.4
+jinja2==2.10
 lazy-object-proxy==1.3.1
+markupsafe==1.0
 mccabe==0.6.1
 mockito==1.1.1
 more-itertools==4.3.0
