--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
 
       - run:
           name: install dependencies
-          command: python -m pip install --upgrade pip pipenv
+          command: python -m pip install --user --upgrade pip pipenv
 
       - run:
           name: lock 
