--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
--i https://pypi.python.org/simple/
 apipkg==1.5
 argh==0.26.2
 astroid==2.1.0
@@ -9,14 +8,14 @@ bleach==3.0.2
 certifi==2018.11.29
 chardet==3.0.4
 click==7.0
-colorama==0.4.1
+colorama==0.4.1 ; sys_platform == 'win32'
 coverage==4.5.2
 dataclasses==0.6
 docopt==0.6.2
 docutils==0.14
 dparse==0.4.1
 elib-config==2018.12.3.1
-elib-run==2018.10.26.1
+elib-run==2018.12.6.1
 execnet==1.5.0
 faker==1.0.0
 future==0.17.1
@@ -41,9 +40,8 @@ pkginfo==1.4.2
 pluggy==0.8.0
 py==1.7.0
 pygments==2.3.0
-pylint==2.1.1
+pylint==2.2.2
 pyparsing==2.3.0
-pystache==0.5.4
 pytest-cache==1.0
 pytest-cov==2.6.0
 pytest-deadfixtures==2.1.0
